tests/out/error/attributes/other.out
tests/out/error/attributes/other.in.bt:1:2 warning: unknown attribute "xyz_attr"
tests/out/error/attributes/other.in.bt:4:2 error: attribute "deprecated_after" requires a value
tests/out/error/attributes/other.in.bt:8:3 error: attribute "required" does not take a value
